# stocksim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
stocksim/: cli.py  utils.py
tests/: test_stocksim.py  test_utils.py
